# serializer version: 1
# name: TestExistingUserLogin.test_login[DJANGO]
  '''
  <div class="c-form mb-5">
                          
                              
  
  
  
  <form class="js-prevent-multiple-submit" method="post">
      <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
      <fieldset>
          <p class="h4">Se connecter avec vos identifiants</p>
          
          
          <div class="form-group form-group-required"><label class="form-label" for="id_login">Adresse e-mail</label><input autocomplete="email" autofocus="" class="form-control" id="id_login" maxlength="320" name="login" placeholder="adresse@email.fr" required="" type="email"/></div>
          <div class="mb-3 form-group-required"><label class="form-label" for="id_password">Mot de passe</label><div class="input-group">
      <input aria-describedby="id_password_helptext" autocomplete="current-password" class="form-control" id="id_password" name="password" placeholder="**********" required="" type="password"/>
  
      <div class="input-group-text p-0">
          <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
              <i aria-hidden="true" class="ri-eye-line"></i>
              <span>Afficher</span>
          </button>
      </div>
  </div><div class="form-text"><a class="btn-link fs-sm" href="/accounts/password/reset/">Mot de passe oublié ?</a></div>
  </div>
      </fieldset>
      
      
  
  <div class="row">
      <div class="col-12">
          <hr class="mb-3"/>
          <small class="d-inline-block mb-3">* champs obligatoires</small>
          <div class="form-row align-items-center justify-content-end gx-3">
              <div class="form-group col-12 col-lg order-3 order-lg-1">
                  
                      <a aria-label="Annuler la saisie de ce formulaire" class="btn btn-link btn-ico ps-lg-0 w-100 w-lg-auto" href="/">
                          <i aria-hidden="true" class="ri-close-line ri-lg"></i>
                          <span>Annuler</span>
                      </a>
                  
              </div>
              
              <div class="form-group col col-lg-auto order-2 order-lg-3">
                  
                      <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" type="submit">
                          <span>Se connecter</span>
                      </button>
                  
              </div>
          </div>
      </div>
  </div>
  
  
  
  </form>
  
                          
                      </div>
  '''
# ---
# name: TestExistingUserLogin.test_login[FC]
  '''
  <div class="c-form mb-5">
                          
                              <p class="h4">Se connecter avec FranceConnect</p>
                              
                                  <p>
                                      <strong>Votre adresse e-mail utilise une connexion via FranceConnect. Veuillez vous connecter en utilisant le bouton ci-dessous.</strong>
                                  </p>
                                  <p>
                                      FranceConnect est la solution proposée par l’État pour sécuriser et simplifier la connexion à vos services en ligne.
                                  </p>
                                  <div class="mt-4">
  
  
  <p class="mb-0 text-primary">
      <strong>Utilisez FranceConnect pour vous connecter ou créer un compte</strong>.
  </p>
  <p class="text-primary">
      FranceConnect est la solution proposée par l’État pour sécuriser et simplifier la connexion à vos services en ligne.
  </p>
  <div class="text-center">
      <a aria-label="S'identifier avec FranceConnect" data-matomo-action="clic" data-matomo-category="inscription-candidat" data-matomo-event="true" data-matomo-option="se-connecter-avec-france-connect" href="/franceconnect/authorize">
          <img alt="" class="img-fluid mb-1 itou-france-connect"/>
      </a>
      <br/>
      <a class="btn btn-link" href="https://app.franceconnect.gouv.fr/en-savoir-plus">Qu’est-ce que FranceConnect ?</a>
  </div>
  </div>
                              
                          
                      </div>
  '''
# ---
# name: TestExistingUserLogin.test_login[PC]
  '''
  <div class="c-form mb-5">
                          
                              
  
  
  
      <div class="text-center">
          <a class="proconnect-button" data-matomo-action="clic" data-matomo-category="connexion prescripteur" data-matomo-event="true" data-matomo-option="se-connecter-avec-pro-connect" href="/pro_connect/authorize?user_kind=prescriber&amp;previous_url=%2Flogin%2Fexisting%2Fc0fee70e-cf34-4d37-919d-a1ae3e3bf7e5%3Fback_url%3D%2Fsignup%2F">
          </a>
          <br/>
          <a class="btn btn-link has-external-link" href="https://proconnect.gouv.fr/" target="_blank">En savoir plus</a>
      </div>
  
  
                          
                      </div>
  '''
# ---
# name: TestExistingUserLogin.test_login[PEC]
  '''
  <div class="c-form mb-5">
                          
                              <p class="h4">Se connecter avec France Travail</p>
                              
                                  <p>
                                      <strong>Votre adresse e-mail utilise une connexion via France Travail. Veuillez vous connecter en utilisant le bouton ci-dessous.</strong>
                                  </p>
                                  <div class="mt-4 text-center">
  
  
  <form action="/pe_connect/authorize" method="post">
      <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
      <input alt="Se connecter avec votre compte France Travail" data-matomo-action="clic" data-matomo-category="inscription-candidat" data-matomo-event="true" data-matomo-option="se-connecter-avec-pe" src="/static/img/peamu_btn.svg" type="image"/>
  </form>
  </div>
                              
                          
                      </div>
  '''
# ---
# name: TestExistingUserLogin.test_login_disabled_provider[DJANGO]
  '''
  <div class="c-form mb-5">
                          
                              
  
  
  
  <form class="js-prevent-multiple-submit" method="post">
      <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
      <fieldset>
          <p class="h4">Se connecter avec vos identifiants</p>
          
          
          <div class="form-group form-group-required"><label class="form-label" for="id_login">Adresse e-mail</label><input autocomplete="email" autofocus="" class="form-control" id="id_login" maxlength="320" name="login" placeholder="adresse@email.fr" required="" type="email"/></div>
          <div class="mb-3 form-group-required"><label class="form-label" for="id_password">Mot de passe</label><div class="input-group">
      <input aria-describedby="id_password_helptext" autocomplete="current-password" class="form-control" id="id_password" name="password" placeholder="**********" required="" type="password"/>
  
      <div class="input-group-text p-0">
          <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
              <i aria-hidden="true" class="ri-eye-line"></i>
              <span>Afficher</span>
          </button>
      </div>
  </div><div class="form-text"><a class="btn-link fs-sm" href="/accounts/password/reset/">Mot de passe oublié ?</a></div>
  </div>
      </fieldset>
      
      
  
  <div class="row">
      <div class="col-12">
          <hr class="mb-3"/>
          <small class="d-inline-block mb-3">* champs obligatoires</small>
          <div class="form-row align-items-center justify-content-end gx-3">
              <div class="form-group col-12 col-lg order-3 order-lg-1">
                  
                      <a aria-label="Annuler la saisie de ce formulaire" class="btn btn-link btn-ico ps-lg-0 w-100 w-lg-auto" href="/">
                          <i aria-hidden="true" class="ri-close-line ri-lg"></i>
                          <span>Annuler</span>
                      </a>
                  
              </div>
              
              <div class="form-group col col-lg-auto order-2 order-lg-3">
                  
                      <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" type="submit">
                          <span>Se connecter</span>
                      </button>
                  
              </div>
          </div>
      </div>
  </div>
  
  
  
  </form>
  
                          
                      </div>
  '''
# ---
# name: TestExistingUserLogin.test_login_disabled_provider[FC]
  '''
  <div class="c-form mb-5">
                          
                              <p class="h4">Se connecter avec FranceConnect</p>
                              
                                  <div class="alert alert-info" role="status">
                                      <p class="mb-0">FranceConnect est désactivé.</p>
                                  </div>
                              
                          
                      </div>
  '''
# ---
# name: TestExistingUserLogin.test_login_disabled_provider[PC]
  '''
  <div class="c-form mb-5">
                          
                              
  
  
  
      <div class="alert alert-info" role="status">
          <p class="mb-2">
              <strong>ProConnect est momentanément désactivé.</strong>
          </p>
          <p class="mb-0">
              Afin de demander un PASS IAE en urgence, <a class="has-external-link" href="https://tally.so/r/nrj0V5" target="_blank">remplissez ce formulaire.</a>
          </p>
      </div>
  
  
                          
                      </div>
  '''
# ---
# name: TestExistingUserLogin.test_login_disabled_provider[PEC]
  '''
  <div class="c-form mb-5">
                          
                              <p class="h4">Se connecter avec France Travail</p>
                              
                                  <div class="alert alert-info" role="status">
                                      <p class="mb-0">France Travail est désactivé.</p>
                                  </div>
                              
                          
                      </div>
  '''
# ---
# name: TestExistingUserLogin.test_login_email_prefilled[login_not_prefilled]
  '''
  <div class="c-form mb-5">
                          
                              
  
  
  
  <form class="js-prevent-multiple-submit" method="post">
      <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
      <fieldset>
          <p class="h4">Se connecter avec vos identifiants</p>
          
          
          <div class="form-group form-group-required"><label class="form-label" for="id_login">Adresse e-mail</label><input autocomplete="email" autofocus="" class="form-control" id="id_login" maxlength="320" name="login" placeholder="adresse@email.fr" required="" type="email"/></div>
          <div class="mb-3 form-group-required"><label class="form-label" for="id_password">Mot de passe</label><div class="input-group">
      <input aria-describedby="id_password_helptext" autocomplete="current-password" class="form-control" id="id_password" name="password" placeholder="**********" required="" type="password"/>
  
      <div class="input-group-text p-0">
          <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
              <i aria-hidden="true" class="ri-eye-line"></i>
              <span>Afficher</span>
          </button>
      </div>
  </div><div class="form-text"><a class="btn-link fs-sm" href="/accounts/password/reset/">Mot de passe oublié ?</a></div>
  </div>
      </fieldset>
      
      
  
  <div class="row">
      <div class="col-12">
          <hr class="mb-3"/>
          <small class="d-inline-block mb-3">* champs obligatoires</small>
          <div class="form-row align-items-center justify-content-end gx-3">
              <div class="form-group col-12 col-lg order-3 order-lg-1">
                  
                      <a aria-label="Annuler la saisie de ce formulaire" class="btn btn-link btn-ico ps-lg-0 w-100 w-lg-auto" href="/">
                          <i aria-hidden="true" class="ri-close-line ri-lg"></i>
                          <span>Annuler</span>
                      </a>
                  
              </div>
              
              <div class="form-group col col-lg-auto order-2 order-lg-3">
                  
                      <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" type="submit">
                          <span>Se connecter</span>
                      </button>
                  
              </div>
          </div>
      </div>
  </div>
  
  
  
  </form>
  
                          
                      </div>
  '''
# ---
# name: TestExistingUserLogin.test_login_email_prefilled[login_prefilled]
  '''
  <div class="c-form mb-5">
                          
                              
  
  
  
  <form class="js-prevent-multiple-submit" method="post">
      <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
      <fieldset>
          <p class="h4">Se connecter avec vos identifiants</p>
          
          
          <div class="form-group form-group-required"><label class="form-label" for="id_login">Adresse e-mail</label><input autocomplete="email" class="form-control" disabled="" id="id_login" maxlength="320" name="login" placeholder="Adresse e-mail" required="" type="email" value="jane.doe@test.local"/></div>
          <div class="mb-3 form-group-required"><label class="form-label" for="id_password">Mot de passe</label><div class="input-group">
      <input aria-describedby="id_password_helptext" autocomplete="current-password" class="form-control" id="id_password" name="password" placeholder="**********" required="" type="password"/>
  
      <div class="input-group-text p-0">
          <button class="btn btn-sm btn-link btn-ico" data-it-password="toggle" type="button">
              <i aria-hidden="true" class="ri-eye-line"></i>
              <span>Afficher</span>
          </button>
      </div>
  </div><div class="form-text"><a class="btn-link fs-sm" href="/accounts/password/reset/">Mot de passe oublié ?</a></div>
  </div>
      </fieldset>
      
      
  
  <div class="row">
      <div class="col-12">
          <hr class="mb-3"/>
          <small class="d-inline-block mb-3">* champs obligatoires</small>
          <div class="form-row align-items-center justify-content-end gx-3">
              <div class="form-group col-12 col-lg order-3 order-lg-1">
                  
                      <a aria-label="Annuler la saisie de ce formulaire" class="btn btn-link btn-ico ps-lg-0 w-100 w-lg-auto" href="/">
                          <i aria-hidden="true" class="ri-close-line ri-lg"></i>
                          <span>Annuler</span>
                      </a>
                  
              </div>
              
              <div class="form-group col col-lg-auto order-2 order-lg-3">
                  
                      <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" type="submit">
                          <span>Se connecter</span>
                      </button>
                  
              </div>
          </div>
      </div>
  </div>
  
  
  
  </form>
  
                          
                      </div>
  '''
# ---
# name: TestJobSeekerPreLogin.test_pre_login_email_unknown
  '<div class="modal-body"><p>Cette adresse e-mail est inconnue de nos services.</p><p>Si vous êtes déjà inscrit(e), assurez-vous de saisir correctement votre adresse e-mail.</p><p>Si vous n\'êtes pas encore inscrit(e), nous vous invitons à cliquer sur Inscription pour créer votre compte.</p></div><div class="modal-footer"><button type="button" class="btn btn-sm btn-link" data-bs-dismiss="modal">Retour</button><a href="/signup/job_seeker/situation" class="btn btn-sm btn-primary">Inscription</a></div>'
# ---
